[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgraph"
version = "0.2.0"
description = "Multi-language typed knowledge graph builder — extract code structure, visualize as interactive graphs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["code-analysis", "graph", "knowledge-graph", "tree-sitter", "visualization"]
authors = [
    {name = "deepgraph contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Visualization",
]

dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "networkx>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
java = ["tree-sitter-java>=0.23"]
javascript = ["tree-sitter-javascript>=0.25", "tree-sitter-typescript>=0.23"]
cpp = ["tree-sitter-cpp>=0.23", "tree-sitter-c>=0.24"]
go = ["tree-sitter-go>=0.25"]
rust = ["tree-sitter-rust>=0.24"]
csharp = ["tree-sitter-c-sharp>=0.23"]
all = [
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c>=0.24",
    "tree-sitter-go>=0.25",
    "tree-sitter-rust>=0.24",
    "tree-sitter-c-sharp>=0.23",
]

[project.urls]
Homepage = "https://github.com/your-username/deepgraph"
Repository = "https://github.com/your-username/deepgraph"

[project.scripts]
deepgraph = "deepgraph.cli:cli"

[tool.setuptools.packages.find]
include = ["deepgraph*"]
